mobile e intento de sendgrid

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_DATO_CMS_API=c2a51fe4f20491c83d662c506ff1be
+SENDGRID_API_KEY=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
