--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@heroicons/react": "^2.0.18",
     "@preline/accordion": "^1.3.0",
     "@preline/collapse": "^1.3.0",
+    "@react-email/render": "0.0.7",
+    "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "graphql-hooks": "^6.3.0",
+    "path-browserify": "^1.0.1",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
