--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "graphql-hooks": "^6.3.0",
     "path-browserify": "^1.0.1",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-loader-spinner": "^5.4.5",
     "react-player": "^2.12.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "typekit": "^0.1.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
